<resources>
    <string name="app_name">"ZWICKbox"</string>
    <string name="name">"Name"</string>
    <string name="app_generic_password">"Password"</string>
    <string name="app_generic_enter_ble">"Not in proximity"</string>
    <string name="locker_details_no_pikcups">"There is nothing to pick up in your locker at the moment."</string>
    <string name="app_generic_privacy_policy">"Terms &amp; conditions"</string>
    <string name="intro_key_sharing_slide_title">"Access grant"</string>
    <string name="intro_register_your_account">"Register Your Account"</string>
    <string name="intro_register_show_password">"Show passwords"</string>
    <string name="key_sharing_content">"You currently didn’t share access to your parcel locker(s) with anyone."</string>
    <string name="app_generic_key_sharing">"Share access"</string>
    <string name="help_description_title">"Help"</string>
    <string name="help_lbl_bottom">"For further questions send an e-mail to:"</string>
    <string name="help_link">"support@zwick.it"</string>
    <string name="peripheral_settings_share_access">"Share access to delivery (size: %s, created: %s)"</string>
    <string name="peripheral_settings_remove_access">"Remove temporary access from %s for Delivery %s (created on: %s)"</string>
    <string name="peripheral_settings_grant_access">"%s shared you access to delivery (size: %s, created: %s)"</string>
    <string name="peripheral_settings_remove_access_success">"Successfully deleted access to locker %s"</string>
    <string name="peripheral_settings_remove_access_error">"Error while deleting access to locker %s"</string>
    <string name="app_generic_size">"Size: %s"</string>
    <string name="locker_details_registration_btn">"Request Access"</string>
    <string name="locker_details_registration_pending_body">"Thank you! Your request was submitted. We’ll notify you once your access has been granted."</string>
    <string name="nav_pickup_parcel_content_lock">"Tap on the Lock icon to open."</string>
    <string name="nav_pickup_parcel_content_unlock">"Please take your package and close locker door."</string>
    <string name="nav_pickup_parcel_unlock">"Unlocked"</string>
    <string name="nav_pickup_parcel_connecting">"Connecting. Please wait..."</string>
    <string name="nav_pickup_parcel_lock">"Locked"</string>
    <string name="nav_pickup_no_delivery_alert">"There is nothing to pick up in your locker at the moment."</string>
    <string name="nav_send_parcel_content_text">"The locker is now open. Please place your package and close the door."</string>
    <string name="nav_send_parcel_error_button">"Retry"</string>
    <string name="nav_settings_title">"General"</string>
    <string name="nav_settings_user_details">"User details"</string>
    <string name="nav_settings_language">"Language"</string>
    <string name="nav_settings_app_language">"App language"</string>
    <string name="nav_settings_change_password">"Change password"</string>
    <string name="login_submit_title">"Sign in"</string>
    <string name="register_submit_title">"Register"</string>
    <string name="forgot_password_title">"Forgot Your Password?"</string>
    <string name="forgot_password_description_title">"Please enter your registered e-mail address so that we can send you a recovery PIN."</string>
    <string name="forgot_password_send">"Send"</string>
    <string name="access_sharing_new_user_allow">"Allow access"</string>
    <string name="access_sharing_new_user_selection">"Select an e-mail address from contacts."</string>
    <string name="access_sharing_new_user_access_details">"Access Details"</string>
    <string name="access_sharing_admin_role">"Full with sharing permissions"</string>
    <string name="access_sharing_user_role">"Parcel pickup only"</string>
    <string name="access_sharing_warning_message">"Are you sure?"</string>
    <string name="toast_access_sharing_remove_success">"Successfully removed user %s from group!"</string>
    <string name="toast_access_sharing_remove_error">"Error while removing user access, please try again later!"</string>
    <string name="key_sharing_delete_key_message">"Are you sure?"</string>
    <string name="app_generic_confirm">"Confirm"</string>
    <string name="app_generic_cancel">"Cancel"</string>
    <string name="app_generic_sign_in">"Sign in"</string>
    <string name="app_generic_sign_out">"Sign out"</string>
    <string name="app_generic_name">"Name"</string>
    <string name="app_generic_phone">"Phone"</string>
    <string name="app_generic_group">"Group name"</string>
    <string name="app_generic_address">"Address"</string>
    <string name="app_generic_email">"E-mail"</string>
    <string name="app_generic_notifications">"Notifications"</string>
    <string name="app_generic_push_notifications">"Push notifications"</string>
    <string name="app_generic_password_recovery">"Forgot Your Password?"</string>
    <string name="app_generic_pickup_parcel">"Collect parcel"</string>
    <string name="app_generic_send_parcel">"Deposit parcel"</string>
    <string name="app_generic_access_sharing">"Access sharing"</string>
    <string name="app_generic_next">"Next"</string>
    <string name="app_generic_finish">"Finish"</string>
    <string name="app_generic_help">"Help"</string>
    <string name="app_generic_no_ble">"Please turn Bluetooth on."</string>
    <string name="send_parcel_available">"%s available"</string>
    <string name="reset_password_title">"Reset Your Password"</string>
    <string name="reset_password_description_title">"Please enter your new password"</string>
    <string name="reset_password_new">"New password"</string>
    <string name="reset_password_pin">"Recovery pin (Send by email)*"</string>
    <string name="reset_password_confirm">"Confirm password"</string>
    <string name="reset_password_done">"Done"</string>
    <string name="toast_access_sharing_add_user_success">"Success"</string>
    <string name="default_notification_channel_id">"fcm_default_channel"</string>
    <string name="default_notification_channel_name">"News"</string>
    <string name="select_locker_description">"Please select a locker you would like to use."</string>
    <string name="access_sharing_share_choose_sharing">"Choose sharing method"</string>
    <string name="access_sharing_share_app_text_zwick">"You are invited to use ZWICKbox app."</string>
    <string name="sent_parcel_error_delete">"Error while deleting the key for user %s, please try again!"</string>
    <string name="app_generic_no_network">"No Internet connection"</string>
    <string name="error_while_saving_user">"Error while saving user id %s please try again!"</string>
    <string name="nav_settings_password_update_success">"Password successfully updated!"</string>
    <string name="ttc_btn">"I accept Terms &amp; Conditions."</string>
    <string name="error_accept_terms_and_conditions">"Please accept Terms &amp; Conditions."</string>
    <string name="nav_ttc_title">"Terms &amp; Conditions"</string>
    <string name="app_generic_password_doesnt_match">"Passwords don't match"</string>
    <string name="privacy_policy_contact_us_title">"Contact us"</string>
    <string name="send_parcel_description">"Please select locker size"</string>
    <string name="edit_user_validation_blank_fields_exist">"Please enter all user information."</string>
    <string name="edit_user_validation_current_password_invalid">"Current password not correct!"</string>
    <string name="edit_user_validation_current_user_invalid">"Current user is not valid!"</string>
    <string name="edit_user_validation_passwords_do_not_match">"Password is incorrect"</string>
    <string name="edit_user_validation_password_min_6_characters">"Password must be at least 6 characters long"</string>
    <string name="edit_user_validation_username_min_4_characters">"Username must be at least 4 characters long"</string>
    <string name="edit_user_validation_terms_and_conditions_not_checked">"Please accept General Terms and Conditions and Privacy Statement."</string>
    <string name="edit_user_notification_setting_email">"E-mail"</string>
    <string name="message_email_invalid">"E-mail address not valid!"</string>
    <string name="nav_login_missing_account">"Don't have an account yet?"</string>
    <string name="login_register_text">"Don’t have an account yet? Register"</string>
    <string name="login_register_link">"Register"</string>
    <string name="access_sharing_pop_up_title">"Share your key"</string>
    <string name="access_sharing_group_selection">"Group"</string>
    <string name="app_generic_error">"Error"</string>
    <string name="email_error">"You don't have e-mail account setup"</string>
    <string name="register_error">"Error while registering the user"</string>
    <string name="register_error_data">"Please check entered data"</string>
    <string name="register_error_empty">"Please fill in all required fields"</string>
    <string name="login_error_title">"Invalid username and/or password"</string>
    <string name="login_error_incorrect">"Not valid username or password!"</string>
    <string name="forgot_password_error">"Please enter your e-mail address"</string>
    <string name="reset_password_error">"Entered PIN is invalid"</string>
    <string name="reset_password_succes">"Your password has been reset successfully"</string>
    <string name="reset_password_resend_alert">"Mail sent. Please check your inbox"</string>
    <string name="reset_password_error_empty">"Please fill in all the fields"</string>
    <string name="reset_password_match_error">"Entered passwords do not match"</string>
    <string name="pickup_parcel_fetch_error">"Failure while fetching pick at friend keys"</string>
    <string name="locker_details_request_error">"Error while requesting access"</string>
    <string name="pickup_parcel_cancel_error">"Failure while canceling pick at friend key"</string>
    <string name="pickup_parcel_create_error">"User already has access"</string>
    <string name="pickup_parcel_email_error">"E-mail is not valid"</string>
    <string name="pickup_parcel_door_error">"Error while openning door"</string>
    <string name="app_generic_enter_email">"Enter e-mail address"</string>
    <string name="app_generic_success">"Success"</string>
    <string name="send_parcel_error_select">"Please select size"</string>
    <string name="send_parcel_error_pin">"Please enter correct PIN"</string>
    <string name="access_sharing_error_delete">"Error when deleting member"</string>
    <string name="grant_access_error">"User not found. Click OK if you want to share the app"</string>
    <string name="settings_update_error">"User profile update failed"</string>
    <string name="settings_update_success">"All changes are saved"</string>
    <string name="nav_settings_logout_description">"Are you sure?"</string>
    <string name="app_generic_time_created">"Created: %s"</string>
    <string name="nav_settings_app_version">"App version %s"</string>
    <string name="app_generic_help_link">"&lt;a href=\"mailto:support@zwick.it\"&gt;support@zwick.it&lt;/a&gt;"</string>
    <string name="locker_details_activate_btn">"Activate"</string>
    <string name="app_generic_support_email">"support@zwick.it"</string>
    <string name="grant_access_error_exists">"User already has access"</string>
    <string name="logout_question">"Are you sure you want to sign out?"</string>
    <string name="logout_again">"You can sign in again at any time."</string>
    <string name="intro_pickup_slide_title">"Pickup"</string>
    <string name="intro_key_sharing_slide_content">"You are away from your locker but need to send/pickup a parcel? Just share a permanent or temporary key to a friend or family member and provide access to your locker."</string>
    <string name="intro_start_title">"Let's start!"</string>
    <string name="online_help">"Online help"</string>
    <string name="skip_onboarding_screen">"Skip"</string>
</resources>