<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/thmSettingsLogoutDialog"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <hr.sil.android.myappbox.fonts.view.fonts.TextViewWithFont
        android:id="@+id/tvRequestSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/grant_access_error"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeRegular"
        android:textColor="?attr/thmDescriptionTextColor"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <hr.sil.android.myappbox.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="?attr/thmMainButtonBackgroundColor"
        android:text="@string/app_generic_cancel"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        app:layout_constraintEnd_toStartOf="@id/btnSelect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRequestSend" />

    <hr.sil.android.myappbox.fonts.ButtonWithFont
        android:id="@+id/btnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="?attr/thmMainButtonBackgroundColor"
        android:text="@string/app_generic_confirm"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/tvRequestSend" />


    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelect" />

</androidx.constraintlayout.widget.ConstraintLayout>
